--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <script src="assets/packages/flutter_tex/js/flutter_tex.js"></script>
+  <script type="module" src="./assets/packages/o3d/assets/model-viewer.min.js" defer></script>
   <script type="text/javascript">window.flutterWebRenderer = "canvaskit";</script>
 
   <meta charset="UTF-8">
@@ -35,7 +36,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "300608330";
+    const serviceWorkerVersion = "132820216";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
